<resources>
    <string name="app_name">GreenFire</string>

    <string name="hello_world">Hello world!</string>
    <string name="item_sair">Sair</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="title_activity_validador">ValidadorActivity</string>
    <string name="texto_validacao">Validação</string>
    <string name="botao_validar">Validar</string>
    <string name="botao_logar">Entrar</string>
    <string name="texto_cadastre">Ainda não possui uma conta? Cadastre-se</string>
    <string name="title_activity_cadastro_usuario">CadastroUsuarioActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GreenFire</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Incêndios Detectados</string>
    <string name="menu_abrir_chamado">Abrir Chamado</string>
    <string name="menu_registros">Registros</string>
    <string name="menu_equipe">Equipe</string>
    <string name="menu_sobre">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="situacoes">Situação</string>

</resources>
